@@ -17,19 +17,17 @@ init:
 test_csv:
 	mkdir -p generated/csv/
 	rm -f generated/csv/*.csv
-	$(shell if [ -f expected/csv/myoutput.csv.gz ]; then gunzip expected/csv/myoutput.csv.gz; fi)
 	${STARSPAN} \
 		--vector data/vector/starspan_testply.shp \
 		--raster data/raster/starspan[1-3]raster.img \
 		--csv generated/csv/myoutput.csv
-	diff expected/csv/myoutput.csv generated/csv/myoutput.csv
+	zcat expected/csv/myoutput.csv.gz | diff - generated/csv/myoutput.csv
 	@echo "$@ : OK"
 	@echo
 	
 test_stats:
 	mkdir -p generated/stats/
 	rm -f generated/stats/*.csv
-	$(shell if [ -f expected/stats/myoutput.csv.gz ]; then gunzip expected/stats/myoutput.csv.gz; fi)
 	${STARSPAN} \
 		--verbose \
 		--fields none \
@@ -37,7 +35,7 @@ test_stats:
 		--raster data/raster/starspan[1-3]raster.img \
 		--nodata 0 \
 		--stats generated/stats/myoutput.csv avg mode stdev min max sum median nulls
-	diff expected/stats/myoutput.csv generated/stats/myoutput.csv
+	zcat expected/stats/myoutput.csv.gz | diff - generated/stats/myoutput.csv
 	@echo "$@ : OK"
 	@echo
 	
